--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ body{
   }   
 
 .counters {
-	background-image: url(../images/img2.jpg);
+	background-image: url(../images/bg1.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
