--- a/css/style.css
+++ b/css/style.css
@@ -760,15 +760,25 @@ body {
     padding: 1rem;
 }
 
+.team .row .card .info .icons-1 a {
+    margin-top: 1rem;
+    padding-top: 0 1rem;
+    font-size: 2rem;
+    color: #333;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
 .team .row .card .info .icons .fa-facebook-f:hover,
 .footer .icons .fa-facebook-f:hover {
     color: #4267B2;
     text-decoration: none;
 }
 
-.team .row .card .info .icons .fa-twitter:hover,
-.footer .icons .fa-twitter:hover {
-    color: #1DA1F2;
+.team .row .card .info .icons .fa-youtube:hover,
+.footer .icons .fa-youtube:hover {
+    color: red;
     text-decoration: none;
 }
 
@@ -1127,11 +1137,7 @@ body {
         font-size: 2.4rem;
     }
 
-    .header .navbar ul li:hover {
-        text-decoration: none;
-        color : black
-    }
-
+    
     .header .fa-times {
         transform: rotate(90deg);
     }
