--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,185 @@ html {
 
 body {
     overflow-x: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+body.dark-mode {
+    background-color: #000000;
+    color: white;
+}
+
+/* Tambahkan gaya untuk elemen lain di mode gelap */
+body.dark-mode .header,
+body.dark-mode .about,
+body.dark-mode .team,
+body.dark-mode .footer,
+body.dark-mode .container .section-header h2 ,
+body.dark-mode .container .section-header p,
+body.dark-mode .container .project,
+/* body.dark-mode .container .project p, */
+body.dark-mode .project a div {
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
+body.dark-mode .project a div {
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+}
+
+
+body.dark-mode .team-content h4,
+body.dark-mode .team-content h5,
+body.dark-mode .heading,
+body.dark-mode .row .content p,
+body.dark-mode .project .item h6,
+body.dark-mode .project .item p,
+body.dark-mode .project h4,
+body.dark-mode a {
+
+    color: white;
+}
+
+body.dark-mode .navbar a {
+    color: white;
+}
+
+body.dark-mode .btn {
+    background-color: #000000;
+    color: white;
+    border: none;
+}
+
+body.dark-mode .modal-content {
+    background-color: #000000;
+    color: white;
+}
+
+body.dark-mode .close {
+    color: white;
+}
+
+body.dark-mode #toggle-button {
+    background-color: #000000;
+    color: white;
+}
+
+button {
+    padding: 10px 20px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+body.dark-mode {
+    background-color: #000000;
+    color: white;
+}
+
+button {
+    padding: 10px 20px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#myImg:hover {
+    opacity: 0.7;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    z-index: 9999999;
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 40%;
+    max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation */
+.modal-content,
+#caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
+    }
 }
 
 .heading,
@@ -829,130 +1008,130 @@ body {
 }
 
 .contact-wrap {
-	width: 80%;
-	height: auto;
-	margin: auto;
-	display: flex;
-	flex-wrap: wrap;
+    width: 80%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
     padding-bottom: 2rem;
 }
 
 .contact-in {
-	padding: 40px 30px;
+    padding: 40px 30px;
 }
 
 .contact-in:nth-child(1) {
-	flex: 30%;
-	/* background: url(../images/1.jpg); */
-	color: white;
-	border-radius: 2rem;
-	box-shadow: 0px 0px 10px 0px #666;
-	background: linear-gradient(to top left, #b80000, #1f0000, #000000);
+    flex: 30%;
+    /* background: url(../images/1.jpg); */
+    color: white;
+    border-radius: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+    background: linear-gradient(to top left, #b80000, #1f0000, #000000);
 }
 
 .contact-in:nth-child(2) {
-	flex: 45%;
-	/* background: white; */
+    flex: 45%;
+    /* background: white; */
 }
 
 .contact-in:nth-child(3) {
-	flex: 25%;
-	padding: 0;
+    flex: 25%;
+    padding: 0;
 }
 
 .contact-in h1 {
-	font-size: 35px;
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: 500;
-	margin-bottom: 20px;
+    font-size: 35px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-bottom: 20px;
 }
 
 .contact-in h2 {
-	font-size: 25px;
-	font-weight: bold;
-	margin-bottom: 15px;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .contact-in h2 i {
-	font-size: 20px;
-	width: 40px;
-	height: 40px;
-	margin-right: 10px;
-	background: #cf0000;
-	color: white;
-	border-radius: 50px;
-	line-height: 40px;
-	text-align: center;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    background: #cf0000;
+    color: white;
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
 }
 
 .contact-in p {
-	font-size: 20px;
-	font-weight: 400;
-	margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
 }
 
 .contact-in ul {
-	padding: 0;
-	margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .contact-in ul li {
-	list-style: none;
-	display: inline-block;
-	margin-right: 5px;
-	margin-top: 5px;
+    list-style: none;
+    display: inline-block;
+    margin-right: 5px;
+    margin-top: 5px;
 }
 
 .contact-in ul li a {
-	display: block;
-	width: 30px;
-	height: 30px;
-	text-align: center;
-	background: #cf0000;
-	border-radius: 50px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    background: #cf0000;
+    border-radius: 50px;
 }
 
 .contact-in ul li a i {
-	font-size: 14px;
-	line-height: 30px;
-	color: #ffffff;
+    font-size: 14px;
+    line-height: 30px;
+    color: #ffffff;
 }
 
 
 
 .contact-in iframe {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 @media only screen and (max-width:480px) {
-	.contact-in:nth-child(1) {
-		flex: 50%;
-	}
+    .contact-in:nth-child(1) {
+        flex: 50%;
+    }
 
-	.contact-in:nth-child(2) {
-		flex: 50%;
-	}
+    .contact-in:nth-child(2) {
+        flex: 50%;
+    }
 
-	.contact-in:nth-child(3) {
-		flex: 100%;
-	}
+    .contact-in:nth-child(3) {
+        flex: 100%;
+    }
 
 }
 
 @media only screen and (max-width:360px) {
-	.contact-in:nth-child(1) {
-		flex: 50%;
-	}
+    .contact-in:nth-child(1) {
+        flex: 50%;
+    }
 
-	.contact-in:nth-child(2) {
-		flex: 50%;
-	}
+    .contact-in:nth-child(2) {
+        flex: 50%;
+    }
 
-	.contact-in:nth-child(3) {
-		flex: 100%;
-	}
+    .contact-in:nth-child(3) {
+        flex: 100%;
+    }
 
 }
 
@@ -1244,7 +1423,7 @@ body {
         font-size: 2.4rem;
     }
 
-    
+
     .header .fa-times {
         transform: rotate(90deg);
     }
