--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,10 @@ body.dark-mode .header,
 body.dark-mode .about,
 body.dark-mode .team,
 body.dark-mode .footer,
-body.dark-mode .container .section-header h2 ,
+body.dark-mode .container .section-header h2,
 body.dark-mode .container .section-header p,
 body.dark-mode .container .project,
+body.dark-mode .container .project p,
 /* body.dark-mode .container .project p, */
 body.dark-mode .project a div {
     background-color: rgb(0, 0, 0);
@@ -65,28 +66,28 @@ body.dark-mode .navbar a {
 }
 
 body.dark-mode .btn {
-    background-color: #000000;
+    /* background-color: none; */
     color: white;
     border: none;
 }
 
-body.dark-mode .modal-content {
+/* body.dark-mode .modal-content {
     background-color: #000000;
     color: white;
-}
+} */
 
 body.dark-mode .close {
     color: white;
 }
 
 body.dark-mode #toggle-button {
-    background-color: #000000;
+    /* background-color: #000000; */
     color: white;
 }
 
-button {
-    padding: 10px 20px;
-    margin-top: 20px;
+a {
+    padding: 10px;
+    /* margin-top: 20px; */
     cursor: pointer;
 }
 
@@ -95,42 +96,74 @@ body.dark-mode {
     color: white;
 }
 
-button {
-    padding: 10px 20px;
-    margin-top: 20px;
+a {
+    padding: 10px;
+    /* margin-top: 20px; */
     cursor: pointer;
+    border: none;
+    /* border-radius: 10rem; */
+
+}
+
+a i {
+    font-size: 20px;
 }
 
 #myImg {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
+    max-width: 100%;
+    height: auto;
 }
 
-#myImg:hover {
+/* #myImg:hover {
     opacity: 0.7;
-}
+} */
 
 /* The Modal (background) */
 .modal {
     display: none;
     position: fixed;
-    padding-top: 100px;
+    z-index: 9999;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    z-index: 9999999;
+    background-color: rgba(0, 0, 0, 0.9);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* padding-top: 50px; */
+    /* padding-bottom: 50px; */
+    box-sizing: border-box;
+    opacity: 1 !important;
 }
+
+.modal img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    opacity: 1 !important;
+}
+
+
 
 /* Modal Content (image) */
 .modal-content {
     margin: auto;
     display: block;
-    width: 40%;
-    max-width: 700px;
+    max-width: 90%;
+    height: auto;
+    /* max-height: 90%; */
+    width: auto;
+    height: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+    opacity: 1 !important;
 }
 
 /* Caption of Modal Image */
@@ -142,47 +175,31 @@ button {
     text-align: center;
     color: #ccc;
     padding: 10px 0;
-    height: 150px;
+    height: auto;
 }
 
 /* Add Animation */
-.modal-content,
-#caption {
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.6s;
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
-@-webkit-keyframes zoom {
-    from {
-        -webkit-transform: scale(0)
-    }
-
-    to {
-        -webkit-transform: scale(1)
-    }
-}
-
 @keyframes zoom {
     from {
-        transform: scale(0)
+        transform: scale(0);
     }
 
     to {
-        transform: scale(1)
+        transform: scale(1);
     }
 }
 
 /* The Close Button */
 .close {
     position: absolute;
-    top: 15px;
+    top: 30px;
     right: 35px;
     color: #f1f1f1;
-    font-size: 40px;
+    font-size: 80px !important;
     font-weight: bold;
     transition: 0.3s;
+    cursor: pointer;
+    z-index: 999999999;
 }
 
 .close:hover,
@@ -198,6 +215,8 @@ button {
         width: 100%;
     }
 }
+
+
 
 .heading,
 .clients .section-header h2,
@@ -1087,13 +1106,15 @@ button {
     display: block;
     width: 30px;
     height: 30px;
-    text-align: center;
+    /* justify-content: center; */
+    /* text-align: center; */
     background: #cf0000;
     border-radius: 50px;
 }
 
 .contact-in ul li a i {
     font-size: 14px;
+    margin-bottom: 7rem;
     line-height: 30px;
     color: #ffffff;
 }
