--- a/css/style.css
+++ b/css/style.css
@@ -68,23 +68,7 @@ body.dark-mode {
     color: white;
 }
 
-.container img {
-    width: 30rem;
-    border-radius: 3rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-.container .row img#app {
-    width: 20rem;
-    border-radius: 3rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    /* background: ; */
-}
 
-.container .row .image img {
-    width: 20rem;
-    border-radius: 3rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
 
 /* Tambahkan gaya untuk elemen lain di mode gelap */
 body.dark-mode .header,
@@ -96,9 +80,10 @@ body.dark-mode .container .section-header p,
 body.dark-mode .container .project,
 body.dark-mode .container .project p#project,
 body.dark-mode .org-chart .level .position,
-body.dark-mode .container img
+body.dark-mode .org-chart .leder .container,
+/* body.dark-mode .container img
 body.dark-mode .container img#app   
-body.dark-mode .container .row .image img
+body.dark-mode .container .row .image img */
 
 /* body.dark-mode .container .project p, */
 body.dark-mode .project a div {
@@ -113,18 +98,24 @@ body.dark-mode .container .project a.card-1 div.item {
 body.dark-mode .org-chart .level .position {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
-
-body.dark-mode .container img {
+body.dark-mode .leder img  {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
+/* body.dark-mode .org-chart .leder  {
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+} */
 
-body.dark-mode .container img#app {
+/* body.dark-mode .container img {
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+} */
+
+/* body.dark-mode .container img#app {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
 
 body.dark-mode .container .row .image img {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
-}
+} */
 
 
 body.dark-mode .team-content h4,
@@ -489,6 +480,7 @@ a i {
     padding: 0 1rem;
     position: relative;
     overflow: hidden !important;
+    /* height: auto; */
 }
 
 .home::before {
