--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,39 @@ body.dark-mode {
     color: white;
 }
 
+.kesan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kesan-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+}
+
+.pesan {
+    display: flex;
+    gap: 100px;
+}
+
+.kesan .pesan .card-3 {
+    border-radius: 8px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.9);
+    padding: 20px;
+    width: 300px;
+}
+.kesan-1 .pesan-1 .card-4 {
+    border-radius: 8px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.9);
+    padding: 20px;
+    padding-top: 2rem;
+    width: 60rem;
+    text-align: center;
+}
+
 
 
 /* Tambahkan gaya untuk elemen lain di mode gelap */
@@ -85,9 +118,13 @@ body.dark-mode .container .project,
 body.dark-mode .container .project p#project,
 body.dark-mode .org-chart .level .position,
 body.dark-mode .org-chart .leder .container,
+/* body.dark-mode .container .row .card */
 /* body.dark-mode .container img
 body.dark-mode .container img#app   
 body.dark-mode .container .row .image img */
+
+body.dark-mode .kesan .pesan .card-3
+body.dark-mode .kesan-1 .pesan-1 .card-4
 
 /* body.dark-mode .container .project p, */
 body.dark-mode .project a div {
@@ -102,9 +139,18 @@ body.dark-mode .container .project a.card-1 div.item {
 body.dark-mode .org-chart .level .position {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
-body.dark-mode .leder img  {
+
+body.dark-mode .leder img {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
+
+body.dark-mode .kesan .pesan .card-3 {
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+}
+body.dark-mode .kesan-1 .pesan-1 .card-4 {
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+}
+
 /* body.dark-mode .org-chart .leder  {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 } */
@@ -129,7 +175,7 @@ body.dark-mode .row .content p,
 body.dark-mode .project .item h6,
 body.dark-mode .project .item p,
 body.dark-mode .project h4,
-body.dark-mode .position .title,
+body.dark-mode .container .card-2 ul body.dark-mode .container .card-2 ul li body.dark-mode .position .title,
 body.dark-mode .position .name,
 body.dark-mode a {
 
@@ -406,8 +452,8 @@ a i {
     left: 0;
     z-index: 100;
     position: fixed;
-    background: linear-gradient(to left, #ff0000, #8b0000, #000000); 
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.4);
+    background: linear-gradient(to left, #ff0000, #8b0000, #000000);
+    box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .4);
 }
 
 .header .logo img {
